UCSFD8-65 fixed the color of byline dot and the alignment of titles on "The Latest" cards

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -12988,6 +12988,9 @@ body.page-node-type-magazine-homepage,
     .magazine-hub-inside .magazine-hub-inside__inside .field-inside-ucsf .article-header__byline .article-header__date,
     .magazine-hub-inside .magazine-hub-inside__hub .field-inside-ucsf .article-header__byline .article-header__date {
       color: #384559; }
+      .magazine-hub-inside .magazine-hub-inside__inside .field-inside-ucsf .article-header__byline .article-header__date::before,
+      .magazine-hub-inside .magazine-hub-inside__hub .field-inside-ucsf .article-header__byline .article-header__date::before {
+        color: #384559; }
   .magazine-hub-inside .magazine-hub-inside__hub .magazine-hub-inside__inside-more {
     margin-bottom: 24px; }
   @media (max-width: 768px) {
@@ -13162,7 +13165,7 @@ body.page-node-type-magazine-homepage,
       padding: 20px; }
       @media (min-width: 850px) {
         .magazine-topic-issue-page .magazine-topics-latest .magazine-topic-list > ul > li .news-card__copy {
-          padding: 20px 40px; } }
+          padding: 20px 0; } }
   @media (min-width: 1050px) {
     .magazine-topic-issue-page .pager {
       padding-top: 0; } }
