--- a/docroot/themes/custom/ucsf/scss/node/_node-magazine-homepage.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-magazine-homepage.scss
@@ -518,6 +518,10 @@ body.page-node-type-magazine-homepage,
 
         .article-header__date {
           color: $magazine-gray-blue;
+
+          &::before {
+            color: $magazine-gray-blue;
+          }
         }
       }
     }
@@ -744,7 +748,7 @@ body.page-node-type-magazine-homepage,
         padding: 20px;
 
         @include breakpoint($new-medium) {
-          padding: 20px 40px;
+          padding: 20px 0;
         }
       }
     }
